[package]
name = "video-zenoh-player"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "player"
path = "src/main.rs"

[dependencies]
anyhow = "1.0.101"
clap = { version = "4.5.58", features = ["derive"] }
eframe = "0.33.3"
gstreamer = "0.24.4"
gstreamer-app = "0.24.4"
gstreamer-video = "0.24.4"
tokio = { version = "1.49.0", features = ["full"] }
zenoh = "1.7.2"

[profile.release]
strip = true
lto = true
opt-level = "s"
